--- a/source/assets/stylesheets/organisms/_gallery.scss
+++ b/source/assets/stylesheets/organisms/_gallery.scss
@@ -49,7 +49,18 @@ $gallery-gutter: $gutter;
 @mixin columns($number: 2, $g: $gallery-gutter) {
     display: inline-block;
     width: (100%/$number);
-    padding-right: $g;
+    padding-right: ($g/2);
+    padding-left: ($g/2);
+
+    // use an nth-child selector to clear away padding set in lower (previous) media queries
+    // -> specificity hack
+    &:nth-child(n) {
+        padding-right: ($g/2);
+        padding-left: ($g/2);
+    }
+
+    &:first-child, &:nth-child(#{$number}n + 1) { padding-left: 0; }
+    &:last-child, &:nth-child(#{$number}n) { padding-right: 0; }
 
     @include yep(flexbox) {
         display: block;
@@ -62,7 +73,7 @@ $gallery-gutter: $gutter;
 // ---------------------------------------------------------------------------*/
 
 .gallery {
-    @include unstyled-list;
+    // @include unstyled-list;
     display: block; // in case flexbox isn't supported
     position: relative;
     margin-bottom: 0;
@@ -72,9 +83,20 @@ $gallery-gutter: $gutter;
     @include flex-wrap(wrap);
     @include align-items(stretch);
 
+    // &.l-wrapper {
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     padding-left: $gutter-outside;
+    // }
+
+    ul {
+        padding-left: 0;
+        margin-left: 0;
+    }
+
     @include respond-to('small') {
         @include display(flex);
-        margin-right: -($gallery-gutter); // to prevent uneven column widths
+        // margin-right: -($gallery-gutter); // to prevent uneven column widths
     }
 }
 
@@ -86,9 +108,9 @@ $gallery-gutter: $gutter;
 .gallery.small {
     @include respond-to('xsmall') {
         @include display(flex);
-        margin-right: -($gallery-gutter); // to prevent uneven column widths
+        // margin-right: -($gallery-gutter); // to prevent uneven column widths
 
-        &.l-wrapper { padding-right: ($gutter-outside - $gutter); }
+        // &.l-wrapper { padding-right: ($gutter-outside - $gutter); }
     }
 }
 
@@ -97,7 +119,7 @@ $gallery-gutter: $gutter;
 .gallery.large {
     @include respond-to('small') {
         @include display(flex);
-        margin-right: -($gallery-gutter); // to prevent uneven column widths
+        // margin-right: -($gallery-gutter); // to prevent uneven column widths
     }
 }
 
@@ -115,6 +137,8 @@ $gallery-gutter: $gutter;
     margin: 0;
     padding-bottom: $gallery-gutter;
     font-size: $type-size--default;
+    padding-left: 0;
+    margin-left: 0;
 
     @include respond-to("small") {
         @include columns(2);
